fix styling on mobile for MainMenu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,7 @@
     @apply h-screen bg-light-blue;
   }
   p {
-    @apply text-xl;
+    @apply text-base md:text-xl;
   }
 }
 
